--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="bar">
             <a href="#">Home</a>
             <a href="#">Shop</a>
-            <a href="#">About Us</a>
+            <a href="#">About us</a>
             <a href="#">Contact</a>
         </div>
     </header>
@@ -23,7 +23,7 @@
         <ul class="lista"></ul>
     </main>
     <footer>
-
+        <p>Anders</p>
     </footer>
     <script src="app.js"></script>
 </body>
