Added Titels to pictures with some text and also changed the buttons a bit at the top of the site!

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <h1>Gallery</h1>
         <div class="bar">
-            <a href="#">Home</a>
-            <a href="#">Shop</a>
-            <a href="#">About us</a>
-            <a href="#">Contact</a>
+            <button href="#">Home</button>
+            <button href="#">Shop</button>
+            <button href="#">About us</button>
+            <button href="#">Contact</button>
         </div>
     </header>
     <main id="square">
