--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="lista"></ul>
     </main>
     <footer>
-        <p>Anders</p>
+        <p>&copy Anders Hansen-Haug</p>
     </footer>
     <script src="app.js"></script>
 </body>
